fix whitespace

--- a/style.css
+++ b/style.css
@@ -439,9 +439,9 @@ body {
     .hero::after {
         content: '';
         display: block;
-        background: url(/assets/desktop/image-hero-right.png) center right/contain no-repeat;
-        position: relative;
-        top: 1.5rem;
+        background: url(/assets/desktop/image-hero-right.png) center center/contain no-repeat;
+        /* position: relative; */
+        /* top: 1.5rem; */
     }
 
     .text__display-header {
